# google_hashcode_2016

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
Hashcode2016_résolution/: Hashcode2016_résolution.VC.db  Hashcode2016_résolution.sln
Hashcode2016_résolution/Hashcode2016_résolution/: Hashcode2016_résolution.vcxproj
Hashcode2016_vérification/: Hashcode2016_vérification.VC.db  Hashcode2016_vérification.sln
Hashcode2016_vérification/Hashcode2016_vérification/: Hashcode2016_vérification.vcxproj
arbitre/: CMakeLists.txt  CmakeLists.txt
arbitre/arbitre/: Exec.cpp  Exec.hpp  Result.cpp  Result.hpp  Utils.hpp  arbitre.vcxproj  listFiles.cpp  listFiles.hpp  main.cpp  utils.hpp
doc/html/: annotated.html  classcollection-members.html  classcollection.html  classes.html  classlocation-members.html  classlocation.html  classphotograph-members.html  classphotograph.html  classsatellite-members.html  classsatellite.html  classsimulation-members.html  classsimulation.html  classtime__range-members.html  classtime__range.html  collection_8hpp_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  graph_legend.html  index.html  location_8hpp_source.html  photograph_8hpp_source.html  satellite_8hpp_source.html  simulation_8hpp_source.html  time__range_8hpp_source.html
doc/latex/: annotated.tex  classcollection.tex  classlocation.tex  classphotograph.tex  classsatellite.tex  classsimulation.tex  classtime__range.tex  refman.tex
hashcode/: CmakeLists.txt  hashcode.sln
hashcode/hashcode/: .Satellite.cpp.swp  Algorithm.hpp  BasicAlgo.cpp  BasicAlgo.hpp  Collection.cpp  Collection.hpp  ConstraintAlgo.cpp  ConstraintAlgo.hpp  GloutonAlgo.cpp  GloutonAlgo.hpp  Location.cpp  Location.hpp  Photograph.cpp  Photograph.hpp  Satellite.cpp  Satellite.hpp  Shoot.cpp  Shoot.hpp  Simulation.cpp  Simulation.hpp  TimeRange.cpp  TimeRange.hpp  collection.cpp  collection.hpp  hashcode.vcxproj  location.cpp  location.hpp  main.cpp  parsing.cpp  parsing.h  parsing.hpp  (+9 more)
include/: collection.hpp
recherche/: build.sh  mise_au_propre_math.tex
src/: main.cpp
(+34 files in other folders)
